--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
     "content_scripts": [
       {
         "world": "MAIN",
-        "matches": ["https://*.odoo.com/*"],
+        "matches": ["*://*.odoo.com/odoo*", "*://*.odoo.com/web*"],
+        "exclude_matches": ["*://*.odoo.com/odoo/login*", "*://*.odoo.com/web/login*"],
         "js": ["content.js"],
         "run_at": "document_idle"
       }
