[FIX] Do not run on mergebot website

--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,8 @@
       ],
       "exclude_matches": [
         "*://*.odoo.com/odoo/login*",
-        "*://*.odoo.com/web/login*"
+        "*://*.odoo.com/web/login*",
+        "*://mergebot.odoo.com/*"
       ],
       "js": [
         "content.js"
