--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,8 @@
       "exclude_matches": [
         "*://*.odoo.com/odoo/login*",
         "*://*.odoo.com/web/login*",
-        "*://mergebot.odoo.com/*"
+        "*://mergebot.odoo.com/*",
+        "*://*.odoo.com/odoo-sh*"
       ],
       "js": [
         "content.js"
