[IMP] Initial firefox compatibility Odoo confirm "just works" on firefox since it doesn't use any browser-specific API's. This commit ensures it runs on 17.0 DB's since firefox doesn't match the previous trailing "web/" pattern with typical "web#..." Odoo 17.0 URL's, unlike chrome where the previous pattern works.

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
       "world": "MAIN",
       "matches": [
         "*://*.odoo.com/odoo/*",
-        "*://*.odoo.com/web/*"
+        "*://*.odoo.com/web/*",
+        "*://*.odoo.com/web"
       ],
       "exclude_matches": [
         "*://*.odoo.com/odoo/login*",
