--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Odoo Confirm",
   "description": "Asks you to confirm before sending a message in Odoo.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "manifest_version": 3,
   "action": {
     "default_icon": "icon.png"
@@ -18,6 +18,7 @@
       "matches": [
         "*://*.odoo.com/odoo/*",
         "*://*.odoo.com/web/*",
+        "*://*.odoo.com/odoo",
         "*://*.odoo.com/web"
       ],
       "exclude_matches": [
