--- a/manifest.json
+++ b/manifest.json
@@ -31,5 +31,11 @@
       ],
       "run_at": "document_idle"
     }
-  ]
+  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "odoo-confirm@example.com",
+      "update_url": "https://raw.githubusercontent.com/hahu-odoo/odoo-confirm/refs/heads/main/updates_firefox.json"
+    }
+  }
 }
